--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
 
         <div class="jumbotron">
             <h1 class="display-4">Bem vindo!</h1>
-            <p class="lead">Este é um sistema de blog que está em desenvolvimento utilizando :D</p>
+            <p class="lead">Este é um sistema de blog que está em desenvolvimento :D</p>
             <hr class="my-4">
             <p>Obrigado por acessar! att. Ruan Almeida</p>
           </div>
@@ -19,7 +19,7 @@
                 </div>
 
                 <div class="card-body">
-                    <a class="btn btn-success">ler artigo</a>
+                    <a href="/<%= article.slug %>" class="btn btn-success">ler artigo</a>
                 </div>
             </div>
             <br>
