--- a/views/partials/homenavbar.ejs
+++ b/views/partials/homenavbar.ejs
@@ -1,6 +1,21 @@
 <nav class="navbar-expand-lg navbar navbar-dark bg-primary">
+    <ul class="navbar-nav mr-auto">
 
-    <a class="navbar-brand" href="/">
-        <i class="fas fa-blog"></i>
-    </a>
+        <li class="nav-item">
+            <a class="navbar-brand" href="/"> <i class="fas fa-blog"></i> </a>
+        </li>
+
+        <% categories.forEach(category => { %>
+            <li class="nav-item">
+                <a class="navbar-brand" href="/category/<%= category.slug %>"><%= category.title %></a>
+            </li>
+        <% });%>
+
+
+        
+            
+        
+
+    </ul>
+
 </nav>
