--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,6 +25,14 @@
             <br>
             <hr>
         <% }) %>
+            <hr>
+        <div class="row">
+            <div class="col col-12">
+                <a style="float: right;" href="/articles/page/2"><i class="fas fa-angle-double-right"></i></a>
+            </div>
+            
+        </div>
+        <hr>
     </div>
 
 
