login tratando sessões, rotas com middlewares, e logout

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,9 +7,13 @@
 
         <div class="jumbotron">
             <h1 class="display-4">Bem vindo!</h1>
-            <p class="lead">Este é um sistema de blog que está em desenvolvimento, que possui algumas rotas administrativas para Artigos e Categorias, por enquanto você pode acessar pelas rotas 
-                /admin/articles - para incluir, listar e deletar artigos e 
-                /admin/categories - para incluir, listar, editar e deletar categorias</p>
+            <p class="lead">Este é um sistema de blog que está em desenvolvimento e possui algumas rotas administrativas <br>
+            para acessá-las clique no botão abaixo e faça login.
+            </p>
+            <a href="/login">
+               <input class="btn btn-success" type="button" value="Fazer login"> 
+            </a>
+            
             <hr class="my-4">
             <p>Obrigado por acessar! att. Ruan Almeida</p>
           </div>
