--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -16,4 +16,12 @@
                 <a class="nav-link" href="/admin/articles">artigos</a>
             </li>
     </ul>
+            <div class="row">
+                <div class="col col-12">
+                    <a class="navbar-brand" href="/">
+                        <i style="float: right;"  class="fas fa-sign-out-alt"></i>
+                    </a>
+                </div>
+            </div>
+    
 </nav>
